testsuite/poke.pkl/return-diag-4.pk
/* { dg-do compile } */

fun lala = int:
{
  return; /* { dg-error "return" } */
}
